# club-costa-azul-whatsapp

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  conversation.py  main.py  services_client.py  state.py  webhook_parser.py  whatsapp_client.py
