[project]
name = "club-costa-azul-bot"
version = "0.1.0"
description = "WhatsApp bot for Club Costa Azul (Meta Cloud API)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic-settings>=2.2,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
